Connect with server 1

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-  <title>Accumind</title>
+  <title>Acumind</title>
 </head>
 
 <body>
